2008-07-17  David Athay  <ko2fan@gmail.com>

	*  src/gui/partywindow.cpp: Fixed crash bug with accepting
	party invites.

2008-07-14  Roderic Morris  <roderic@ccs.neu.edu>

	* src/CMakeLists.txt: Added the partyhandler to the cmake build list.
	* src/gui/viewport.cpp: Reverse the effect of visible names.
	* src/gui/chat.cpp, src/gui/chat.h: Cosmetic changes to a hack.

2008-07-14  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/commandhandler.cpp, src/game.h: Added admin commands
	to /help. Added registering party handler.

2008-07-07  Roderic Morris  <roderic@ccs.neu.edu>

	* src/net/chathandler.cpp, src/net/chathandler.h, src/commandhandler.h,
	src/commandhandler.cpp, src/net/protocol.h, src/net/chatserver/chatserver.cpp,
	src/net/chatserver/chatserver.h: Get rid of channel registering related code.

2008-07-07  David Athay  <ko2fan@gmail.com>

	* src/commandhandler.hpp, src/commandhandler.cpp: Added help for each 
	command based on mantis bug #359, thanks to Scraggy.
	* src/localplayer.cpp, src/commandhandler.cpp, src/gui/popupmenu.cpp,
	src/commandhandler.h, src/localplayer.h: Added /party command.

2008-07-05  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/gui.cpp: Allow foreign keyboards to use alt key
	on Mac. Remove includes no longer needed.

2008-07-04  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.cpp, src/gui/chat.h: Ugly hack for chat scrolling.

2008-07-03  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/window.cpp: Fix guild window focus and fix crash
	when typing in account login.
 
2008-07-02  Philipp Sehmisch  <tmw@crushnet.org>

	* src/being.cpp: Fixed speech bubbles staying on screen during map change bug.

2008-07-01  Roderic Morris  <roderic@ccs.neu.edu>

	* data/graphics/gui/CMakeLists.txt, src/CMakeLists.txt, src/Makefile.am:
	Add new files to CMakeLists, add missing backslash to Makefile.

2008-07-01  Philipp Sehmisch  <tmw@crushnet.org>
